# Housaky

./: .dockerignore  .gitignore  .trigger  AGENTS.md  AGI_ANALYSIS_2026.md  AGI_GAPS_ANALYSIS.md  ARCHITECTURE.md  CHANGELOG.md  CLI_ERRORS_AND_MISSING_IMPLEMENTATIONS.md  COLLECTIVE_SECURITY.md  COMMANDS.md  COMPILATION_ERRORS_ANALYSIS.md  COMPLETE_AGI.md  COMPLETION_REPORT.md  COMPREHENSIVE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  EXECUTIVE_SUMMARY_V4.md  FEATURE_COMPARISON.md  FINAL_COMPLETION_REPORT.md  FINAL_CONSOLIDATED_REPORT_V4.md  FINAL_REPORT.md  GITHUB_READY.md  GSD_INTEGRATION_VERIFICATION.md  HOUSAKY-OPENCLAW.md  HOUSAKY-SRC.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_V4.md  LICENSE  MARKET-housaky.md  PRODUCTION_READINESS_REPORT.md  QUICK_REFERENCE.md  README.md  README_V4.md  REVIEW.md  REVIEW_COMPLETE.md  ROADMAP_TO_100_V5.md  (+32 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: android.yml  auto-response.yml  ci.yml  dashboard.yml  deploy-hub.yml  deploy.yml  docker.yml  ios.yml  pages.yml  release.yml
.housaky/: collaborative_bridge.md  improvement_cycles.json  improvement_experiments.json  lucid_integration.md  self_mod_parameters.json  terminal_mcp_config.json
.housaky/decision_journal/: decisions.msgpack
.housaky/shared/: HOUSAKY.proto  bridge.json  collaborative_heartbeat.sh  communication.md  status.json
.housaky/whatsapp-bridge/: package.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
dashboard/src/: App.vue  config-sync.test.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: lib.rs  main.rs
dashboard/tests/: curl_test.sh  e2e.spec.ts
dev/: README.md  ci.sh  cli.sh  config.template.toml  docker-compose.ci.yml  docker-compose.yml
docs/: HDIN_SPEC.md  HOUSAKY_INTEGRATION.md  MARKET_INTEGRATION.md  MODULE_AUDIT.md  PROJECT_OVERVIEW_MISSING_FEATURES.md  PROMPT_INTEGRATION.md  RESEARCH_GUIDE.md  SECURITY_AUDIT.md  actions-source-policy.md  adding-boards-and-tools.md  agi-readiness.md  agnostic-security.md  arduino-uno-q-setup.md  audit-logging.md  frictionless-security.md  hardware-peripherals-design.md  index.html  lifi-protocol.md  network-deployment.md  nucleo-setup.md  pr-workflow.md  resource-limits.md  reviewer-playbook.md  rlm-design.md  sandboxing.md  security-roadmap.md
docs/A2A/: index.html
docs/assets/: A2A-Cv6oc1_y.css  Home-Cwld8XQ-.css  Instances-B1U8m9qo.js  Memory-RzaywmpQ.js  Research-BFIKoMD_.css  Terminal-DPkEISkK.css  index-BF10I9sC.css  index-l8TCAZ6y.js
docs/datasheets/: arduino-uno.md  esp32.md
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
housaky-agi/: Cargo.toml
housaky-agi/src/: lib.rs
housaky-api/: Cargo.toml
housaky-api/src/: cli.rs  lib.rs  main.rs  server.rs
housaky-consensus/: Cargo.toml
housaky-consensus/src/: consensus_learning.rs  lib.rs  pbft.rs  proof.rs  raft.rs
housaky-core/: Cargo.toml
housaky-core/src/: agi_orchestrator.rs  complete_agi.rs  crypto.rs  lib.rs  llm_integration.rs  orchestrator.rs  quantum.rs  types.rs  unified_agi.rs
housaky-economy/: Cargo.toml
housaky-economy/src/: economy.rs  lib.rs  token.rs
housaky-energy/: Cargo.toml
housaky-energy/src/: energy_manager.rs  lib.rs  monitor.rs
housaky-evolution/: Cargo.toml
housaky-evolution/src/: ast_mutator.rs  dgm.rs  fitness.rs  lib.rs  mutation.rs  sandbox.rs  selection.rs  singularity.rs
housaky-genetics/: Cargo.toml
housaky-genetics/src/: algorithm.rs  lib.rs
housaky-lifi/: Cargo.toml
housaky-lifi/src/: hardware.rs  lib.rs  link.rs  protocol.rs  receiver.rs  transmitter.rs
housaky-llm/: Cargo.toml
housaky-llm/src/: consensus.rs  cross_attention.rs  inference.rs  kv_cache.rs  lib.rs  neuromorphic.rs  quantization.rs  quantum_llm.rs  reasoning.rs  rl_tuning.rs  tokenizer.rs
housaky-llm/src/gpu/: mod.rs
housaky-llm/src/kademlia/: mod.rs
housaky-metalearning/: Cargo.toml
housaky-metalearning/src/: hyperparameters.rs  lib.rs  maml.rs  nas.rs  reptile.rs
housaky-multimodal/: Cargo.toml
housaky-network/: Cargo.toml
housaky-network/src/: distributed_agi.rs  lib.rs
housaky-neuromorphic/: Cargo.toml
housaky-p2p/: Cargo.toml
housaky-p2p/src/: dht.rs  discovery.rs  gossip.rs  lib.rs  network.rs  protocol.rs
housaky-photon-db/: Cargo.toml
housaky-photon-db/src/: database.rs  lib.rs
housaky-photonics/: Cargo.toml
housaky-photonics/src/: detector.rs  encoding.rs  lib.rs  processor.rs
housaky-reasoning/: Cargo.toml
housaky-replication/: Cargo.toml
housaky-replication/src/: erasure.rs  lib.rs
housaky-rlm/: Cargo.toml
housaky-rlm/src/: inference.rs  lib.rs  model.rs  tokenizer.rs
housaky-security/: Cargo.toml
housaky-security/src/: authentication.rs  encryption.rs  key_management.rs  lib.rs
housaky-storage/: Cargo.toml
housaky-storage/src/: chunking.rs  content.rs  lib.rs  sharding.rs
housaky-swarm/: Cargo.toml
housaky-swarm/src/: lib.rs  (+2 more)
housaky-verification/: Cargo.toml
housaky-verification/src/: formal.rs  lib.rs  static_analysis.rs  tests.rs
landing/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
prompts/: HEARTBEAT.md  IDENTITY.md  MEMORY.md  SYSTEM_PROMPT.md  USER.md
scripts/: build_appimage.sh  build_package.sh  collaborative_start.sh  self_improve.sh  start_collaborative.sh  test_subagents.sh
shared/: HOUSAKY-A2A.md  PROTOCOL.md  REFLECTION.md
src/: HOUSAKY-SRC.md  a2a_prove.rs  blockchain.rs  commands.rs  evolution.rs  federated_node.rs  identity.rs  key_management.rs  lib.rs  main.rs  migration.rs  photon_detector.rs  quantum_state.rs  reasoning.rs  util.rs  vkm_client.rs
tests/: cognitive_test.rs  dockerignore_test.rs  key_management_test.rs  memory_comparison.rs  streaming_test.rs  whatsapp_webhook_security.rs
(+866 files in other folders)
