[package]
name = "housaky"
version = "2.0.0"
edition = "2021"
authors = ["Housaky Contributors"]
license = "Apache-2.0"
repository = "https://github.com/housaky/housaky"
description = "Housaky AGI - Autonomous Self-Improving Distributed Intelligence"
rust-version = "1.75"

[[bin]]
name = "housaky"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Parallelism
rayon = "1.10"

# Image processing
image = "0.25"
nokhwa = { version = "0.10", features = ["input-native"], optional = true }

# Cryptography
blake3 = "1.5"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# UUID
uuid = { version = "1.10", features = ["v4", "serde"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"], optional = true }

# Blockchain
sha2 = "0.10"
bincode = "1.3"

# Metrics
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["metrics"]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
web = ["dep:wasm-bindgen"]
camera = ["dep:nokhwa"]
full = ["metrics", "web", "camera"]
full-crypto = []

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = true
codegen-units = 16
rpath = false
strip = true

[profile.bench]
opt-level = 3
debug = false
lto = "thin"

[profile.test]
opt-level = 1
debug = true

# Profile for maximum performance (longer compile times)
[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"

