[package]
name = "housaky"
version = "3.0.0"
edition = "2021"
authors = ["Housaky Contributors"]
license = "Apache-2.0"
repository = "https://github.com/housaky/housaky"
description = "Housaky AGI v2026.2 - Autonomous Self-Improving Distributed Intelligence with Quantum Consciousness"
rust-version = "1.75"

[workspace]
members = [
    "housaky-core",
    "housaky-evolution",
    "housaky-consensus",
    "housaky-storage",
    "housaky-rlm",
    "housaky-photonics",
    "housaky-lifi",
    "housaky-metalearning",
    "housaky-genetics",
    "housaky-replication",
    "housaky-economy",
    "housaky-energy",
    "housaky-verification",
    "housaky-photon-db",
    "housaky-api",
    "housaky-p2p",
    "housaky-security",
    "housaky-agi",
    "housaky-reasoning",
    "housaky-swarm",
    "housaky-neuromorphic",
    "housaky-network",
    "housaky-llm",
    "housaky-multimodal",
]

[workspace.package]
version = "3.0.0"
edition = "2021"
authors = ["Housaky Contributors"]
license = "Apache-2.0"
repository = "https://github.com/housaky/housaky"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full", "rt-multi-thread"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.10"
ndarray = "0.15"
blake3 = "1.5"
rand = "0.8"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
hex = "0.4"
futures = "0.3"

[[bin]]
name = "housaky"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rayon = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
bincode = "1.3"
image = "0.25"
housaky-core = { path = "housaky-core" }
housaky-evolution = { path = "housaky-evolution" }
housaky-consensus = { path = "housaky-consensus" }
housaky-api = { path = "housaky-api" }
housaky-p2p = { path = "housaky-p2p" }
housaky-storage = { path = "housaky-storage" }
housaky-rlm = { path = "housaky-rlm" }
housaky-reasoning = { path = "housaky-reasoning" }
housaky-agi = { path = "housaky-agi" }
housaky-llm = { path = "housaky-llm" }
housaky-energy = { path = "housaky-energy" }
housaky-lifi = { path = "housaky-lifi" }

[features]
default = []
metrics = []
web = []
camera = []
full = ["metrics", "web", "camera"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = true
codegen-units = 16
rpath = false
strip = true

[profile.bench]
opt-level = 3
debug = false
lto = "thin"

[profile.test]
opt-level = 1
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
