[package]
name = "housaky"
version = "0.1.0"
edition = "2021"
authors = ["theonlyhennygod"]
license = "MIT"
description = "Zero overhead. Zero compromise. 100% Rust. The fastest, smallest AI assistant."
repository = "https://github.com/HautlyS/Housaky"
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot", "agi"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
jsonrpsee = { version = "0.20", default-features = false, features = ["client", "server"] }
# CLI - minimal and fast
clap = { version = "4.5", features = ["derive"] }

# Async runtime - feature-optimized for size
tokio = { version = "1.42", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde_yaml = "0.9"

# MessagePack - fast binary serialization (replaces JSON for complex data)
rmp = "0.8"
rmpv = "1.0"
rmp-serde = "1.1"

# Config
directories = "5.0"
dirs = "5.0"
toml = "1.0"
shellexpand = "3.1"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

# Observability - Prometheus metrics
prometheus = { version = "0.14", default-features = false }

# Base64 encoding (screenshots, image data)
base64 = "0.22"

# Optional Rust-native browser automation backend
fantoccini = { version = "0.22.0", optional = true, default-features = false, features = ["rustls-tls"] }

# WhatsApp Baileys-like library (QR code pairing)
#wa-rs = { version = "0.2", optional = true, default-features = false, features = ["sqlite-storage", "tokio-transport", "tokio-native"] }
#wa-rs-sqlite-storage = { version = "0.2", optional = true }
#wa-rs-tokio-transport = { version = "0.2", optional = true }
#wa-rs-ureq-http = { version = "0.2", optional = true }

# Browser automation via Chrome DevTools Protocol
chromiumoxide = { version = "0.8", optional = true, default-features = false, features = ["tokio-runtime"] }

# Kowalski AI Agent framework
kowalski = { version = "0.5", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID generation
uuid = { version = "1.11", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# CSPRNG for secure token generation
rand = "0.8"

# Fast mutexes that don't poison on panic
parking_lot = "0.12"

# Landlock (Linux sandbox) - optional dependency
landlock = { version = "0.4", optional = true }

# Clipboard support (optional)
arboard = { version = "3.4", optional = true }

# TUI
crossterm = "0.28"
ratatui = "0.29"

# Async traits
async-trait = "0.1"

# Memory / persistence
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
cron = "0.12"

# Interactive CLI prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.15"

# Hardware discovery (device path globbing)
glob = "0.3"

# Discord / ElevenLabs WebSocket gateway
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hostname = "0.4.2"

# X25519 key exchange for secure channels
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
mail-parser = "0.11.2"
rustls = "0.23"
rustls-pki-types = "1.14.0"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.6"

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout", "cors", "set-header"] }
http-body-util = "0.1"

# OpenTelemetry — OTLP trace + metrics export
opentelemetry = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "metrics", "http-proto", "reqwest-client", "reqwest-rustls-webpki-roots"] }

# File system watcher for hot-reload
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

# USB device enumeration (hardware discovery)
nusb = { version = "0.2", default-features = false, optional = true }

# Serial port for peripheral communication (STM32, etc.)
tokio-serial = { version = "5", default-features = false, optional = true }

# probe-rs for STM32/Nucleo memory read (Phase B)
probe-rs = { version = "0.30", optional = true }

# PDF extraction for datasheet RAG (optional, enable with --features rag-pdf)
pdf-extract = { version = "0.10", optional = true }

# Regex for text processing
regex = "1.10"

# System info for performance benchmarks
sysinfo = "0.33"

# Rust AST parsing for self-modification
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
walkdir = "2.5"

# Tree-sitter for incremental parsing + structural code ops
# We use the official crates.io dependency; vendored tree-sitter is kept as reference only.
tree-sitter = "0.24"

# Optional grammars (enable when you want structural parsing for that language)
tree-sitter-rust = { version = "0.21", optional = true }

# HTML scraping
scraper = "0.22"

# URL parsing
url = "2.5"

# Tempfile for sandbox execution
tempfile = "3.14"

# ZIP archive support
zip = { version = "2.2", default-features = false, features = ["deflate"] }

# RSS/Atom feed parsing (for web monitoring)
feed-rs = { version = "2.0", optional = true }

# JSONPath for complex queries
jsonpath-rust = { version = "0.5", optional = true }

# WASM runtime for sandboxed tool execution
wasmi = { version = "0.37", optional = true }

# Additional async utilities
tokio-stream = "0.1"

# MD5 hashing
md-5 = "0.10"

# AWS SDK for Amazon Braket quantum computing + S3 result retrieval
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio", "credentials-process", "credentials-login"] }
aws-sdk-braket = "1"
aws-sdk-s3 = "1"
aws-smithy-runtime = { version = "1", features = ["rt-tokio"] }

# Raspberry Pi GPIO (Linux/RPi only) — target-specific to avoid compile failure on macOS
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.14", optional = true }

[features]
# Disabled by default: legacy / unstable integration tests for key management.

# Enable Rust grammar for tree-sitter based parsing (used by self-improvement tooling).
tree-sitter-rust = ["dep:tree-sitter-rust"]

# IMPORTANT: `cargo test --all-features` should remain stable, so these tests require an
# additional opt-in feature (`run-unstable-tests`) to compile.
unstable-key-tests = []
# NOTE: run-unstable-tests is intentionally NOT a Cargo feature.
# as a hard opt-in gate that is never enabled by `--all-features`.
# To run them, use: RUSTFLAGS='--cfg feature="run-unstable-tests"' cargo test --features unstable-key-tests

default = ["hardware", "tree-sitter-rust"]
hardware = ["nusb", "tokio-serial"]
peripheral-rpi = ["rppal"]
# probe = probe-rs for Nucleo memory read (adds ~50 deps; optional)
probe = ["dep:probe-rs"]
# rag-pdf = PDF ingestion for datasheet RAG
rag-pdf = ["dep:pdf-extract"]
# sandbox features (placeholder for future implementation)
sandbox-bubblewrap = []
sandbox-landlock = []
# browser-native feature (placeholder for native browser automation)
browser-native = []
# WhatsApp Baileys-like support (QR code pairing)
#whatsapp-qr = ["dep:wa-rs", "dep:wa-rs-sqlite-storage", "dep:wa-rs-tokio-transport", "dep:wa-rs-ureq-http"]
# Browser CDP automation (chromiumoxide)
browser-cdp = ["dep:chromiumoxide"]
# Kowalski AI Agent integration
kowalski-agent = ["dep:kowalski"]
# web monitoring
web-monitoring = ["dep:feed-rs"]
# advanced queries
advanced-queries = ["dep:jsonpath-rust"]
# WASM runtime for sandboxed tool execution
runtime-wasm = ["dep:wasmi"]
# Clipboard support for TUI
clipboard = ["dep:arboard"]

[profile.release]
opt-level = "z"      # Optimize for size
lto = "thin"         # Lower memory use during release builds
codegen-units = 8     # Faster, lower-RAM codegen for small devices
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("run-unstable-tests", "clipboard"))'] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.14"
