[package]
name = "housaky-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed consensus protocol with quantum-inspired voting and learning"

[dependencies]
tokio = { workspace = true }
tokio-util = "0.7"
bytes = "1.0"
metrics = "0.21"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
futures = "0.3"
housaky-core = { path = "../housaky-core" }
serde_bytes = "0.11"

[dev-dependencies]
tokio-test = "0.4"
