[package]
name = "housaky-evolution"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Self-improvement and code evolution system with singularity detection"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
tokio-util = { workspace = true }
housaky-core = { path = "../housaky-core" }
tempfile = "3"
blake3 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
tokio-test = "0.4"
