[package]
name = "housaky-llm"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
tokenizers = "0.15"
ndarray = "0.15"
rayon = "1.8"
