[package]
name = "housaky-llm"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
tokenizers = "0.15"
ndarray = "0.15"
rayon = "1.8"
llama-cpp-rs = "0.1"
cudart = "0.1"
rust-cuda = "0.5"
tch = { version = "0.7", features = ["cuda"] }
triton = "0.2"
async-std = "1.12"
futures = "0.3"
once_cell = "1.18"
log = "0.4"
thiserror = "1.0"
