[package]
name = "housaky-llm"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
ndarray = "0.15"
rayon = "1.8"
async-std = "1.12"
futures = "0.3"
once_cell = "1.18"
log = "0.4"
thiserror = "1.0"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
