[package]
name = "housaky-metalearning"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Meta-learning algorithms (MAML, Reptile, NAS)"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
housaky-core = { path = "../housaky-core" }

[dev-dependencies]
tokio-test = "0.4"
