[package]
name = "housaky-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed AGI network integration with GitHub and notebook platforms"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
housaky-core = { path = "../housaky-core" }
housaky-consensus = { path = "../housaky-consensus" }

[dev-dependencies]
tokio-test = "0.4"
