[package]
name = "housaky-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Peer-to-peer networking layer with libp2p"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
housaky-core = { path = "../housaky-core" }
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "kad", "identify", "ping", "macros", "mdns"] }

[dev-dependencies]
tokio-test = "0.4"
