[package]
name = "housaky-photonics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Photon detection and light-based processing"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
image = "0.25"
rayon = { workspace = true }
housaky-core = { path = "../housaky-core" }

[dev-dependencies]
tokio-test = "0.4"
