[package]
name = "housaky-replication"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node replication and redundancy system"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
housaky-core = { path = "../housaky-core" }
housaky-storage = { path = "../housaky-storage" }
reed-solomon-erasure = "6.0"

[dev-dependencies]
tokio-test = "0.4"
