[package]
name = "housaky-rlm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Reasoning Language Model - local transformer inference"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
half = "2.3"
candle-core = "0.8"
candle-nn = "0.8"
rand = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
