[package]
name = "housaky-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptography and security primitives"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
noise-protocol = { workspace = true }
rand = "0.8"
x25519-dalek = "2"
housaky-core = { path = "../housaky-core" }

[dev-dependencies]
tokio-test = "0.4"
