[package]
name = "housaky-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Decentralized storage"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
futures = "0.3"
housaky-core = { path = "../housaky-core" }
multibase = "0.9"
bs58 = "0.5"

[dev-dependencies]
tokio-test = "0.4"
