[package]
name = "housaky-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Decentralized storage"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
futures = "0.3"
housaky-core = { path = "../housaky-core" }
multibase = "0.9"
bs58 = "0.5"
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1.5"
cid = "0.11"
iroh = "0.28"
unsigned-varint = "0.8"

[dev-dependencies]
tokio-test = "0.4"
